Updated footer link url

--- a/Ashley/index.html
+++ b/Ashley/index.html
@@ -405,7 +405,7 @@ footer p span {
 	<footer>
 		<div class='container'>
 			<div class='row'>
-				<p><img src='http://i.imgur.com/oPsolEt.jpg' style='height:30px;'> The Urban Collar <span id='llc'>LLC</span> &copy; 2017<br><span>Designed by <a href='#'>WIZNERDZ</a></span></p>	
+				<p><img src='http://i.imgur.com/oPsolEt.jpg' style='height:30px;'> The Urban Collar <span id='llc'>LLC</span> &copy; 2017<br><span>Designed by <a href='http://www.wiznerdz.wordpress.com'>WIZNERDZ</a></span></p>	
 			</div>
 		</div>
 	</footer>
